Package: R.matlab
=================

Version: 2.3.1 [2014-04-26]
o Now package is byte-compiled by default.


Version: 2.3.0 [2014-02-21]
o ROBUSTNESS: Now the package runs the garbage collector if unloaded
  in order to make sure finalize() is called on any deleted Matlab 
  objects.


Version: 2.2.4 [2014-02-17]
o BUG FIX: setOption() for Matlab gave ''Error in UseMethod("setOption") :
  no applicable method for 'setOption' applied to an object of class
  "c('Options', 'Object')"''.  Added a package system test for this.
  Thanks to Griet Laenen at KU Leuven for reporting on this.


Version: 2.2.3 [2014-02-03]
o BACKWARD COMPATIBILITY: The inference on the type of compression
  used in the error message when uncompression failed would itself
  generate an error on R (< 3.0.0).
o Bumped up package dependencies.


Version: 2.2.2 [2014-01-28]
o Added option 'R.matlab::readMat/v4/textMatrixCollapse' controlling
  whether MAT v4 text matrixes are collapsed into strings by row
  ("byrow"; default), by column ("bycolumn") or not at all ("none").
o Whenever there is an uncompress error in readMat(), it now tries to
  infer what type of compression the buffer has by inspecting the first
  two bytes and include the type in the error message.
o BUG FIX: readMat(..., drop="singletonLists") would throw an error
  if the singleton list dropped contained NULL and that NULL was
  assigned to an element of an outer list, resulting in that element
  being dropped.


Version: 2.2.1 [2014-01-28]
o ROBUSTNESS: Now Matlab$startServer() asserts that all MATLAB server
  files that are indeed successfully copied, iff missing.
o CLEANUP: open() for Matlab no longer generates warnings on
  "socketConnection(...) ... cannot be opened", which occured while
  waiting/polling for the Matlab server to startup and respond.


Version: 2.2.0 [2014-01-21]
o DOCUMENTATION: Updated list of Matlab versions for which the
  package has been confirmed to work with.